# yatl

./: LICENSE  README.md  Taskfile.yml  yatl.code-workspace
.github/workflows/: haskell.yml
docs/: specification.md
poc/: foo.yatl  poc.tasks.yml
yatlc/: .hlint.yaml  TODO.md  yatlc.cabal  yatlc.tasks.yml
yatlc/app/: Main.hs
yatlc/src/AST/: AST.hs
yatlc/src/Compiler/: Compiler.hs  Error.hs  Location.hs  Options.hs
yatlc/src/Generator/: Generator.hs
yatlc/src/Parser/: Error.hs  Parser.hs  Scanner.hs  Token.hs
yatlc/test/: ParserSpec.hs  ScannerSpec.hs
