cabal-version:      3.0
name:               yatlc
version:            0.0.0.1

license:            MIT
license-file:       LICENSE
author:             Raphael Meyer

category:           Language
build-type:         Simple

common warnings
    ghc-options: -Wall -Wextra -Werror

library
    import:           warnings
    exposed-modules:
        AST.AST
        Generator.Generator
        Parser.Parser

    -- other-modules:
    -- other-extensions:

    build-depends:
        base ^>=4.18.3.0,
        bytestring,
        text,

    hs-source-dirs:   src
    default-language: Haskell2010

executable yatlc
    import:           warnings
    main-is:          Main.hs

    build-depends:
        base ^>=4.18.3.0,
        bytestring,
        text,
        yatlc

    hs-source-dirs:   app
    default-language: Haskell2010
