cabal-version:      3.0
name:               yatlc
version:            0.0.0.1

license:            MIT
license-file:       LICENSE
author:             Raphael Meyer

category:           Language
build-type:         Simple

common warnings
    ghc-options: -Wall -Wextra -Werror

library
    import:           warnings
    exposed-modules:
        AST.AST
        Compiler.Compiler
        Compiler.Error
        Compiler.Options
        Generator.Generator
        Parser.Parser
        Parser.Scanner
        Parser.Token

    -- other-modules:
    -- other-extensions:

    build-depends:
        base ^>=4.20,
        bytestring,
        filepath,
        mtl,
        text,

    hs-source-dirs:   src
    default-language: Haskell2010

executable yatlc
    import:           warnings
    main-is:          Main.hs

    build-depends:
        base ^>=4.20,
        optparse-applicative,
        text,
        yatlc

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite yatlc-test
    import:           warnings
    main-is: Spec.hs

    other-modules:
        ParserSpec
        ScannerSpec

    build-depends:
        base,
        extra,
        hspec,
        yatlc

    build-tool-depends:
        hspec-discover:hspec-discover

    type: exitcode-stdio-1.0
    hs-source-dirs: test
    default-language: Haskell2010

test-suite yatlc-style
    type:             exitcode-stdio-1.0
    main-is:          Style.hs
    hs-source-dirs:   tools
    default-language: Haskell2010
    build-depends:    base
    build-tool-depends:
        ormolu:ormolu,
        hlint:hlint
